<resources>
    <string name="app_name">Cooking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_monNhau">Món nhậu</string>
    <string name="menu_monKho">Món kho</string>
    <string name="menu_monChay">Món chay</string>
    <string name="menu_monTrangMieng">Món tráng miệng</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
