<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monNhau"
            android:icon="@drawable/meal_24"
            android:title="@string/menu_monNhau" />
        <item
            android:id="@+id/nav_monKho"
            android:icon="@drawable/meal_24"
            android:title="@string/menu_monKho" />
        <item
            android:id="@+id/nav_monChay"
            android:icon="@drawable/meal_24"
            android:title="@string/menu_monChay" />
        <item
            android:id="@+id/nav_monTrangMieng"
            android:icon="@drawable/meal_24"
            android:title="@string/menu_monTrangMieng" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
